🎯 Rebrand: Mudança de nome para 'Sala Livre'
✨ Alterações realizadas:
- package.json: Nome alterado para 'sala-livre'
- Todas as interfaces: 'Reunião Fácil' → 'Sala Livre'
- Emails de usuários: @reuniaofacil.com → @salalivre.com
- Database: reuniao_facil → sala_livre
- Configurações de deploy atualizadas
- Documentação atualizada

🔧 Arquivos atualizados:
- package.json
- views/login.html
- netlify/index.html
- config/passport-memory.js
- setup/database.js
- README.md
- README-DEPLOY.md

👤 Novos logins padrão:
- admin@salalivre.com / admin123
- joao@salalivre.com / admin123
- maria@salalivre.com / admin123

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reuniao-facil",
+  "name": "sala-livre",
   "version": "1.0.0",
-  "description": "Reunião Fácil - Sistema de Agenda de Salas com Hierarquia de Usuários",
+  "description": "Sala Livre - Sistema de Agenda de Salas com Hierarquia de Usuários",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
