--- a/.env.production
+++ b/.env.production
@@ -9,9 +9,9 @@ APP_URL=https://seu-dominio.com
 # ==================== GOOGLE CLOUD SQL ====================
 DB_HOST=SEU_IP_GOOGLE_CLOUD_SQL
 DB_PORT=3306
-DB_NAME=reuniao_facil
-DB_USER=seu_usuario_cloud_sql
-DB_PASSWORD=sua_senha_cloud_sql
+DB_NAME=sala_livre
+DB_USER=app_user
+DB_PASSWORD=SUA_SENHA_SUPER_SEGURA_AQUI
 DB_CONNECTION_LIMIT=10
 
 # ==================== SEGURANÇA ====================
