--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "setup-db": "node setup/database.js"
+    "setup-db": "node setup/database.js",
+    "test-db": "node test-google-cloud.js"
   },
-  "keywords": ["agenda", "reunioes", "salas", "calendario", "dashboard", "reuniao-facil"],
+  "keywords": [
+    "agenda",
+    "reunioes",
+    "salas",
+    "calendario",
+    "dashboard",
+    "reuniao-facil"
+  ],
   "author": "Reunião Fácil Team",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mysql2": "^3.6.0",
-    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.14.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
