--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sala-livre-functions",
   "version": "1.0.0",
-  "description": "Netlify Functions para Sala Livre",
+  "description": "Netlify Functions para Sala Livre com Google Cloud SQL",
   "dependencies": {
     "mysql2": "^3.6.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.6.1"
   }
 }
