🔐 Configurar Google OAuth com credenciais reais + API google-auth integrada ao Google Cloud SQL

--- a/.env.netlify
+++ b/.env.netlify
@@ -6,12 +6,16 @@
 # Google Cloud SQL
 DB_HOST=34.45.56.79
 DB_USER=app_user
-DB_PASS=SUA_SENHA_DO_BANCO_AQUI
+DB_PASSWORD=Neves@2025
 DB_NAME=sala_livre
 DB_PORT=3306
 
-# JWT Secret (gerar uma chave forte)
-JWT_SECRET=sua_chave_super_secreta_jwt_aqui_deve_ser_muito_forte
+# JWT Secret 
+JWT_SECRET=seu_jwt_secret_super_seguro_aqui_123456789
+
+# Google OAuth
+GOOGLE_CLIENT_ID=62181412028-hgs2ak8evqikk4uhl2lpv3omtglf4opl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # Configurações adicionais
 NODE_ENV=production
@@ -26,9 +30,11 @@ NODE_ENV=production
 # OU use o Netlify CLI:
 # netlify env:set DB_HOST "34.45.56.79"
 # netlify env:set DB_USER "app_user"
-# netlify env:set DB_PASS "SUA_SENHA"
+# netlify env:set DB_PASSWORD "Neves@2025"
 # netlify env:set DB_NAME "sala_livre"
-# netlify env:set JWT_SECRET "sua_chave_secreta"
+# netlify env:set JWT_SECRET "seu_jwt_secret_super_seguro_aqui_123456789"
+# netlify env:set GOOGLE_CLIENT_ID "62181412028-hgs2ak8evqikk4uhl2lpv3omtglf4opl.apps.googleusercontent.com"
+# netlify env:set GOOGLE_CLIENT_SECRET "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"
 
 # ==================== VERIFICAR SE FUNCIONOU ====================
 
