--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Reunião Fácil Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
